--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -82,16 +82,6 @@ a {
 }
 
 
-// @TODO
-.select {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  width: 200px;
-}
-
-
 // == Components
 #app {
   position: relative;
@@ -328,22 +318,32 @@ a {
 .drop-info {
   position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 9999;
-  width: 100%;
-  height: 100%;
-  background: rgba($color-primary, .9);
-  border: 4px solid $color-accent;
-  color: $color-accent;
-  font-size: 60px;
+  background: rgba($color-accent, .9);
+  color: #fff;
+  font-size: 3rem;
   font-weight: bold;
   line-height: 1.4;
   text-align: center;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
   transition: all $transition-duration $transition-easing;
   visibility: hidden;
   opacity: 0;
-
-  body.is-enter & {
+  &:before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    bottom: 8px;
+    left: 8px;
+    display: block;
+    border: 1px dashed #fff;
+  }
+  &.is-enter,
+  &.is-progress {
     visibility: visible;
     opacity: 1;
   }
@@ -353,8 +353,15 @@ a {
     right: 0;
     bottom: 0;
     left: 0;
-    height: 150px;
+    height: 100px;
     margin: auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: all $transition-duration $transition-easing;
+    .drop-info.is-enter & {
+      opacity: 1;
+      visibility: visible;
+    }
   }
   @include e(title){
     margin: 0;
@@ -363,6 +370,19 @@ a {
     margin: 0;
     color: #fff;
     font-size: 14px;
+  }
+  @include e(spinner) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    visibility: hidden;
+    transform: translate(-50%, -50%);
+    transition: all $transition-duration $transition-easing;
+    .drop-info.is-progress & {
+      opacity: 1;
+      visibility: visible;
+    }
   }
 }
 
@@ -501,5 +521,40 @@ a {
       margin: .4em 0 1em 0;
       font-size: .9rem;
     }
+  }
+}
+
+
+//== Spinner
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-width: 0 2px 2px 2px;
+  border-style: solid;
+  border-color: #fff;
+  border-radius: 50%;
+  animation: spin .5s infinite linear;
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    display: none;
+    width: inherit;
+    height: inherit;
+    border: inherit;
+    border-radius: inherit;
   }
 }
