--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -19,3 +19,20 @@
     -moz-osx-font-smoothing: auto;
   }
 }
+
+@mixin position($type, $top: auto, $right: auto, $bottom: auto, $left: auto, $z-index: auto) {
+  position: $type;
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+  z-index: $z-index;
+}
+
+@mixin absolute($top: auto, $right: auto, $bottom: auto, $left: auto, $z-index: auto) {
+  @include position(absolute, $top, $right, $bottom, $left, $z-index);
+}
+
+@mixin fixed($top: auto, $right: auto, $bottom: auto, $left: auto, $z-index: auto) {
+  @include position(fixed, $top, $right, $bottom, $left, $z-index);
+}
