--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,518 +5,23 @@
 @import "normalize";
 @import "font-awesome/font-awesome";
 @import "iconmoon";
-@import "select/default";
+@import "base";
 
+@import "components/select/default";
+@import "components/btn";
+@import "components/container";
+@import "components/copyright";
+@import "components/drop-info";
+@import "components/editor-header";
+@import "components/editor";
+@import "components/editors";
+@import "components/footer";
+@import "components/modal";
+@import "components/shares";
+@import "components/spinner";
 
-// == Utilities
-.clearfix {
-  zoom: 1;
-
-  &:after {
-    content: "";
-    clear: both;
-    display: block;
-  }
-}
-
-
-// == Base
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-body,
-html {
-  @include font-smooth;
-  width: 100%;
-  height: 100%;
-  background: $color-primary;
-  font-size: 14px;
-  font-family: $font-sans-serif;
-}
-
-body {
-  min-width: 320px;
-}
-
-a {
-  color: $color-link;
-  text-decoration: none;
-
-  &:hover {
-    color: $color-link-hover;
-  }
-
-  &:active {
-    color: $color-link-active;
-  }
-}
-
-::selection {
-  background: $color-accent;
-}
-
-::-moz-selection {
-  background: $color-accent;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  color: #c5c8c6;
-  background: darken(#25282c, 5%);
-  z-index: 10;
-  &:horizontal {
-    height: 6px;
-  }
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 3px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: darken(#25282c, 10%);
-}
-
-
-// == Components
 #app {
   position: relative;
   width: 100%;
   height: 100%;
-}
-
-.container {
-  position: relative;
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-  min-width: 960px;
-  height: 100%;
-  padding-bottom: $footer-height;
-  @include e(row){
-    display: table-row;
-    width: 100%;
-  }
-  @include e(col){
-    display: table-cell;
-    width: 50%;
-  }
-}
-
-.btn {
-  display: inline-block;
-  margin: 0;
-  padding: 1rem 2rem;
-  border: 0;
-  background: $color-accent;
-  color: #fff;
-  font-family: $font-sans-serif;
-  font-size: 1rem;
-  font-weight: bold;
-  text-decoration: none;
-  user-select: none;
-  transition: all $transition-duration $transition-easing;
-  .fa {
-    margin-right: .2em;
-  }
-  &:focus {
-    outline: none;
-  }
-  &:hover {
-    background: darken($color-accent, 6%);
-  }
-  &:active {
-    background: darken($color-accent, 10%);
-  }
-}
-
-.editor-header {
-  $height: 40px;
-  height: $height;
-  background: lighten($color-primary, 2%);
-  color: #fff;
-  @include e(title) {
-    float: left;
-    margin: 0;
-    padding: 0 25px;
-    font-family: $font-sans-serif;
-    font-size: 1.2rem;
-    font-weight: bold;
-    line-height: $height;
-    @include m(brand) {
-      @extend .editor-header__title;
-      padding: 0;
-      font-family: $font-accent;
-      font-size: 1.6rem;
-      letter-spacing: .05em;
-      a {
-        display: block;
-        padding: 0 25px;
-        transition: all $transition-duration $transition-easing;
-        &:hover {
-          background: darken($color-primary, 5%);
-          color: #fff;
-        }
-      }
-    }
-  }
-  @include e(control) {
-    float: right;
-    .btn {
-      float: left;
-      display: block;
-      margin: 0 0 0 1px;
-      padding-top: 0;
-      padding-bottom: 0;
-      height: $height;
-      line-height: $height;
-    }
-  }
-}
-
-.editors {
-  height: 100%;
-}
-
-.editor {
-  @include font-smooth(false);
-  position: relative;
-  height: 100%;
-  font-family: $font-code !important;
-  font-size: 15px !important;
-  line-height: 1.4 !important;
-  @include m(input){
-    @extend .editor;
-  }
-  @include m(output){
-    @extend .editor;
-  }
-}
-
-.footer {
-  @include absolute(auto, auto, 0, 0, 1000);
-  display: block;
-  width: 100%;
-  height: $footer-height;
-  padding: 0 25px;
-  background: darken($color-primary, 10%);
-  .shares {
-    float: left;
-  }
-  .copyright {
-    float: right;
-  }
-}
-
-.shares {
-  margin: 0;
-  padding: 5px 0 0 0;
-  font-size: 0;
-  @include e(item){
-    position: relative;
-    display: inline-block;
-    margin: 0 5px 0 0;
-    list-style: none;
-    font-size: 1.4rem;
-    @include m(twitter){
-      @extend .shares__item;
-      .shares__link:hover {
-        color: $color-sns-twitter;
-      }
-    }
-    @include m(facebook){
-      @extend .shares__item;
-      .shares__link:hover {
-        color: $color-sns-facebook;
-      }
-    }
-    @include m(hatena){
-      @extend .shares__item;
-      .shares__link:hover {
-        color: $color-sns-hatena;
-      }
-    }
-    @include m(pocket){
-      @extend .shares__item;
-      .shares__link:hover {
-        color: $color-sns-pocket;
-      }
-    }
-    @include m(github){
-      @extend .shares__item;
-      .shares__link:hover {
-        color: $color-sns-github;
-      }
-    }
-  }
-  @include e(link){
-    display: block;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    line-height: 40px;
-    transition: color $transition-duration $transition-easing;
-  }
-  @include e(popup){
-    @include absolute(-30px, auto, auto, 0, 10);
-    width: auto;
-    min-height: 20px;
-    padding: .6em 1.2em;
-    border-radius: 3px;
-    background: #000;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .7);
-    opacity: 0;
-    visibility: hidden;
-    color: #fff;
-    font-size: .8rem;
-    text-align: center;
-    white-space: nowrap;
-    transform: translateY(5px);
-    transition: all $transition-duration $transition-easing;
-    &:after {
-      @include absolute(auto, auto, -5px, 15px);
-      content: "";
-      display: block;
-      width: 0;
-      height: 0;
-      border-width: 5px;
-      border-style: solid;
-      border-color: #000;
-      border-right-color: transparent;
-      border-left-color: transparent;
-      border-bottom-width: 0;
-      border-bottom-color: transparent;
-    }
-    .shares__item:hover & {
-      visibility: visible;
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-}
-
-.copyright {
-  margin: 0;
-  color: #fff;
-  font-size: .9rem;
-  letter-spacing: .05em;
-  line-height: $footer-height;
-}
-
-.drop-info {
-  @include fixed(0, 0, 0, 0, 9999);
-  background: rgba($color-accent, .9);
-  color: #fff;
-  font-size: 3rem;
-  font-weight: bold;
-  line-height: 1.4;
-  text-align: center;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, .4);
-  transition: all $transition-duration $transition-easing;
-  visibility: hidden;
-  opacity: 0;
-  &:before {
-    @include absolute(8px, 8px, 8px, 8px);
-    content: "";
-    display: block;
-    border: 1px dashed #fff;
-  }
-  &.is-enter,
-  &.is-progress {
-    visibility: visible;
-    opacity: 1;
-  }
-  @include e(body){
-    @include absolute(0, 0, 0, 0);
-    height: 100px;
-    margin: auto;
-    opacity: 0;
-    visibility: hidden;
-    transition: all $transition-duration $transition-easing;
-    .drop-info.is-enter & {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-  @include e(title){
-    margin: 0;
-  }
-  @include e(text){
-    margin: 0;
-    color: #fff;
-    font-size: 14px;
-  }
-  @include e(spinner) {
-    @include absolute(50%, auto, auto, 50%);
-    opacity: 0;
-    visibility: hidden;
-    transform: translate(-50%, -50%);
-    transition: all $transition-duration $transition-easing;
-    .drop-info.is-progress & {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-}
-
-
-//== Modal
-.modal {
-  $width: 600px;
-  $height: 400px;
-  $heading-height: 50px;
-  @include fixed(0, 0, 0, 0, 9999);
-  display: block;
-  opacity: 0;
-  visibility: hidden;
-  color: #333;
-  transition: all $transition-duration $transition-easing;
-  ::-webkit-scrollbar {
-    background: #eee;
-  }
-  ::-webkit-scrollbar-thumb {
-    background: #aaa;
-  }
-  @include m(show) {
-    opacity: 1;
-    visibility: visible;
-  }
-  @include e(overlay) {
-    @include absolute(0, 0, 0, 0, 0);
-    background: rgba(0, 0, 0, .5);
-  }
-  @include e(content) {
-    @include absolute(50%, auto, auto, 50%, 10);
-    width: $width;
-    height: $height;
-    max-height: 100%;
-    background: #fff;
-    border-radius: 3px;
-    box-shadow: 0 5px 6px rgba(0, 0, 0, .6);
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(1.05, 1.05) translate(-50%, -50%);
-    transform-origin: 0% 0%;
-    transition: all $transition-duration $transition-easing;
-    transition-delay: $transition-duration / 2;
-    .modal--show & {
-      opacity: 1;
-      visibility: visible;
-      transform: scale(1, 1) translate(-50%, -50%);
-    }
-    &:focus {
-      outline: none;
-    }
-  }
-  @include e(heading) {
-    overflow: hidden;
-    height: $heading-height;
-    background: #efefef;
-    border-bottom: 1px solid #eaeaea;
-    border-radius: 3px 3px 0 0;
-  }
-  @include e(title) {
-    float: left;
-    margin: 0;
-    padding: 0 25px;
-    font-size: 1.6rem;
-    font-weight: bold;
-    line-height: $heading-height;
-    .fa {
-      margin-right: .2em;
-    }
-  }
-  @include e(close) {
-    float: right;
-    display: block;
-    width: $heading-height;
-    height: $heading-height;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background: transparent;
-    font-size: 1.2rem;
-    line-height: $heading-height;
-    &:focus {
-      outline: none;
-    }
-    &:hover {
-      opacity: .5;
-    }
-  }
-  @include e(body) {
-    max-height: $height - $heading-height;
-    overflow-y: auto;
-    padding: 25px;
-    dl {
-      margin: 0 0 1rem 0;
-    }
-    dt {
-      margin: 0 0 .5em 0;
-      font-weight: bold;
-    }
-    dd {
-      margin: 0 0 1.5em 0;
-    }
-    input[type="text"] {
-      display: block;
-      width: 100%;
-      height: 35px;
-      padding: 4px 10px;
-      background: #fff;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-      font-size: 1rem;
-      line-height: 35px;
-      transition: all $transition-duration $transition-easing;
-      &:focus {
-        outline: none;
-        border-color: $color-accent;
-      }
-      &:hover {
-        box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
-      }
-    }
-    ._help {
-      margin: .4em 0 1em 0;
-      font-size: .9rem;
-    }
-  }
-}
-
-
-//== Spinner
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.spinner {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-width: 0 2px 2px 2px;
-  border-style: solid;
-  border-color: #fff;
-  border-radius: 50%;
-  animation: spin .5s infinite linear;
-  &:before,
-  &:after {
-    @include absolute(-2px, auto, auto, -2px);
-    content: "";
-    display: none;
-    width: inherit;
-    height: inherit;
-    border: inherit;
-    border-radius: inherit;
-  }
 }
