--- a/css/style.css
+++ b/css/style.css
@@ -3871,7 +3871,8 @@ a:active {
   margin: 0 0 1.5em 0;
 }
 
-.modal__body input[type="text"] {
+.modal__body input[type="text"],
+.modal__body input[type="number"] {
   display: block;
   width: 100%;
   height: 35px;
@@ -3880,16 +3881,18 @@ a:active {
   border: 1px solid #ccc;
   border-radius: 3px;
   font-size: 1rem;
-  line-height: 35px;
+  line-height: 1.6;
   transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.modal__body input[type="text"]:focus {
+.modal__body input[type="text"]:focus,
+.modal__body input[type="number"]:focus {
   outline: none;
   border-color: #006064;
 }
 
-.modal__body input[type="text"]:hover {
+.modal__body input[type="text"]:hover,
+.modal__body input[type="number"]:hover {
   box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
 }
 
